WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108877
Chromium: Hang parsing bidi control chars on Mac OS X 10.6
https://bugs.webkit.org/show_bug.cgi?id=108877
Summary
Chromium: Hang parsing bidi control chars on Mac OS X 10.6
asvitkine
Reported
2013-02-04 16:28:39 PST
Chromium: Hang parsing bidi control chars on Mac OS X 10.6
Attachments
Patch
(4.99 KB, patch)
2013-02-04 17:06 PST
,
asvitkine
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
asvitkine
Comment 1
2013-02-04 17:06:49 PST
Created
attachment 186501
[details]
Patch
asvitkine
Comment 2
2013-02-04 17:08:33 PST
Ned, can you review? (Related to your changes from
https://bugs.webkit.org/show_bug.cgi?id=83045
)
Ned Holbrook
Comment 3
2013-02-04 17:14:07 PST
Looks good to me, thanks!
Nico Weber
Comment 4
2013-02-04 17:16:53 PST
mitz: Since you reviewed
bug 83045
, can you stamp this? nholbook gave it a thumbs up in
comment 3
.
asvitkine
Comment 5
2013-02-05 12:25:42 PST
Eric was also involved with the other bug. Eric: Can I get an r+? Nad already said it lg to him.
Eric Seidel (no email)
Comment 6
2013-02-05 12:28:50 PST
Mitz is really the proper reviewer if you can get him.
asvitkine
Comment 7
2013-02-06 22:49:15 PST
mitz: ping
Eric Seidel (no email)
Comment 8
2013-02-07 16:12:01 PST
Comment on
attachment 186501
[details]
Patch LGTM.
WebKit Review Bot
Comment 9
2013-02-07 16:52:55 PST
Comment on
attachment 186501
[details]
Patch Clearing flags on attachment: 186501 Committed
r142206
: <
http://trac.webkit.org/changeset/142206
>
WebKit Review Bot
Comment 10
2013-02-07 16:52:58 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug